another round of changes

--- a/_harpapp/public/a/previously.jade
+++ b/_harpapp/public/a/previously.jade
@@ -7,10 +7,9 @@ include ../project/index.jade
 
 
 
-h3 Conferences
 
-ul
-  li Gigaom Roadmap 2014
-  li International Startup Fest
-  li Florida Student Sustainability Summit
-  li Warmgun 2013
+h2 Conferences
+ul.majorlist
+  li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
+  li: a(href="#") Gigaom Roadmap 2014
+  li: a(href="#") Startup Fest
