--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -15,61 +15,82 @@ div.covertext
             li Writer of <a href="http://designtox.tumblr.com">designtox</a> tumblr
         div.unit.one-of-two
           ul
-            li Co-founder, Design Lead at <a href="http://tinyterms.co">TinyTerms</a>
+            li Co-founder <a href="http://tinyterms.co">TinyTerms</a>
 
 
 div.cover
   div.separator
 
 
-
 section.menu
-  nav.unit.one-of-three
-    ul
-      li Work
-      //li: a(href="/a/about.html") About
-      li: a(href="/weeResume") Résumé
-      //li: a(href="/a/previously.html") Case Study: Hejia
-      //li: a(href="/a/previously.html") Case Study: TinyTerms
-      li: a(href="/a/previously.html") Projects
-      li: a(href="/a/favorites.html") Favorite Things
-      li: a(href="/articles/") Articles
-      //li: a(href="https://twitter.com/_ndrw/favorites") Tweets I'm Reading
-      //li: a(href="#") How I work
-      //li: a(href="#") Shop
-  nav.unit.two-of-three
-    ul
-      li Hi again
-      li.mutedtext.
-        I'm Andrew. I'm a student with a strong interest in designing experiences and digital products. <!--In the past, I've . However, what I truly love is experiences, products, behavior, and humans.-->
-
-        My life revolves around the intersection of design, technology, education, and sustainability.
-
-        I currently live in Berkeley, CA, but have previously lived in Chicago, Florida, New York, Beijing, Montreal, and Vancouver.
-
-        I post some quite opinionated shit on <a href="https://twitter.com/_ndrw">Twitter</a> and snap some occassional photos on <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.
-  
-  //
+  div.container
     nav.unit.one-of-three
       ul
-        li Two
-        li: a(href="http://noodlesandbrain.tumblr.com") Noodles &amp; Brain
-        li: a(href="http://advicefromacollegedropout.com") Podcast Project
-        li: a(href="/a/one-line-book-reviews.html") One-line UX book reviews
-        li: a(href="/a/content-consumption.html") Content Consumption
-        li: a(href="/startupcities/") StartupCities
-        li: a(href="#") 10 Rules to Life
-        li: a(href="#") How to be a UX designer
-    nav.unit.one-of-three
+        li Work
+        li: a(href="/a/about.html") About
+        li: a(href="/articles/") Articles
+        li: a(href="/weeResume") Résumé
+        //li: a(href="/a/previously.html") Case Study: Hejia
+        //li: a(href="/a/previously.html") Case Study: TinyTerms
+        li: a(href="/a/previously.html") Projects
+        li: a(href="/a/favorites.html") Favorite Things
+        //li: a(href="https://twitter.com/_ndrw/favorites") Tweets I'm Reading
+        //li: a(href="#") How I work
+        //li: a(href="#") Shop
+    nav.unit.two-of-three
       ul
-        li Three
-        li: a() Viatask (2011)
-        li: a(href="http://obnyc.tumblr.com") New York (2012)
-        li: a() TinyTerms (2014)
-    nav.unit.one-of-three
-      ul
-        li Four
-        li: a(href="http://design-lab.ndrw.me/") ndrw design lab
-        li: a(href="http://2010-2013.ndrw.me") 2010-2013.ndrw.me
-        li: a(href="http://2008-2009.ndrw.me") 2008-2009.ndrw.me
+        li Hi again
+        li.mutedtext.
+          The format of a bio.
+
+          I am a product designer. I conceptualize and test designs for technology products that will change the world. I previously
+
+
+          I am <a profession>. <I build and help run companies that unlock human potential.> 
+
+          I <previously did this, and this, and this>, and <later headed the site after its acquisition by IGN>. I now excitedly lead the design effort <at TinyTerms>, using design to improve access to legal contracts. If you are interseted in <aisdjfi, aisdfjdaf, or asdifjsidfj>, you should talk to me. 
+
+          I work at <Zaarly>. On weekends I build <Evergreen (@evergrnlibrary)>.
+
+          I have studied <design, philosophy, psychology, and cognitive science>. Besides design, I <have interest in this, or have worked in this, or blah>. I have <4 years of experience working on product in tech startups in the US and China>. 
+
+          I also serve <as research lead at Car Design Research, advisor to Royal College of Art, and lab coordinator at CIW>. I was a <finalist for the 800CEORead award for best business book of 2010, and was ranked as one of the year's best books by The Economist>. <His book The Ghost Map was one of the ten best nonfiction books of 2006 according to Entertainment Weekly.> 
+
+          I am a <musician, designer, critical thinker, and philosopher> or I like to <think about this, create this, play guitar, etc.>. 
+
+          I was a top student in high school, and tested out of a year's worth of college. I studied a little bit at University of Florida and a little bit at the University of California at Berkeley and a little bit on my own. I write and think about design, education, and society. My latest project is <An iOS app called Spot that I built for MHacks> came out of Startup Weekend Legaltech, where we won Github's Judge's Choice Award and have been featured on <VentureBeat, Chicago Tribune.>
+
+
+
+          I'm Andrew. I'm a student with a strong interest in designing experiences and digital products. <!--In the past, I've . However, what I truly love is experiences, products, behavior, and humans.-->
+
+          My life revolves around the intersection of design, technology, education, and sustainability.
+
+          I currently live in Berkeley, CA, but have previously lived in Chicago, Florida, New York, Beijing, Montreal, and Vancouver.
+
+          I post some quite opinionated shit on <a href="https://twitter.com/_ndrw">Twitter</a> and snap some occassional photos on <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.
+    
+    //
+      nav.unit.one-of-three
+        ul
+          li Two
+          li: a(href="http://noodlesandbrain.tumblr.com") Noodles &amp; Brain
+          li: a(href="http://advicefromacollegedropout.com") Podcast Project
+          li: a(href="/a/one-line-book-reviews.html") One-line UX book reviews
+          li: a(href="/a/content-consumption.html") Content Consumption
+          li: a(href="/startupcities/") StartupCities
+          li: a(href="#") 10 Rules to Life
+          li: a(href="#") How to be a UX designer
+      nav.unit.one-of-three
+        ul
+          li Three
+          li: a() Viatask (2011)
+          li: a(href="http://obnyc.tumblr.com") New York (2012)
+          li: a() TinyTerms (2014)
+      nav.unit.one-of-three
+        ul
+          li Four
+          li: a(href="http://design-lab.ndrw.me/") ndrw design lab
+          li: a(href="http://2010-2013.ndrw.me") 2010-2013.ndrw.me
+          li: a(href="http://2008-2009.ndrw.me") 2008-2009.ndrw.me
 
