--- a/_harpapp/public/project/index.jade
+++ b/_harpapp/public/project/index.jade
@@ -6,12 +6,9 @@ section.projects
     div.unit.one-of-four
       h3 Airbnb
       p.
-        Built at a hackathon sponsored by Volkswagen, IDEO, and MIT Media Lab. Working with a CS friend, we created a tool that predicts the funness of roads by various data fields collected by on-board diagnostics. We presented to a panel of judges, including the head of global marketing at VW Group. We won the GitHub Judge's Choice award.
-      h4 How it works
-      p.
-        TinyTerms is built on a modular system
+        Airbnb allows individuals to rent out their space and for travelers to find unique experiences all over the world.
       h4 My role
-      p UX/UI consulting
+      p Consultant
 
   section.a-project.c
     div.unit.three-of-four
@@ -19,12 +16,12 @@ section.projects
     div.unit.one-of-four
       h3 TinyTerms
       p.
-        Built at a hackathon sponsored by Volkswagen, IDEO, and MIT Media Lab. Working with a CS friend, we created a tool that predicts the funness of roads by various data fields collected by on-board diagnostics. We presented to a panel of judges, including the head of global marketing at VW Group. We won the GitHub Judge's Choice award.
+        As co-founder, I led the idea and made sure the product was beautiful, focused, and cohesive. As the only designer on the team, I worked with three developers on the product, leading the branding and user experience.
       h4 How it works
       p.
-        TinyTerms is built on a modular system
+        TinyTerms was a modular app that generated embeddable and printable legal documents in a beautiful, easy-to-read format. The mission was to make it easy for everyone to create and read legal documents.
       h4 My role
-      p Design Lead
+      p Co-founder, Design Lead
 
   section.a-project.a
     div.unit.three-of-four
@@ -32,12 +29,12 @@ section.projects
     div.unit.one-of-four
       h3 routeFun
       p.
-        Built at a hackathon sponsored by Volkswagen, IDEO, and MIT Media Lab. Working with Shawn Jain, we built a tool that predicts the funness of roads by various data fields collected by a car's on-board diagnostics. We presented to a panel of judges, including the head of global marketing at VW Group.
+        Built at a hackathon sponsored by MIT Media Lab, Volkswagen, and IDEO, I worked with Shawn Jain to create a tool that predicts the funness of roads by various data attributes collected through a car's on-board diagnostics. We presented to a panel of judges, including the head of global marketing of VW Group.
       h4 How it works
       p.
-        The tool pulls in four data fields from VW's OBD-II dataset and calculates it using our funness model, generating an approximate funness rating for each segment of road which, when combined with smartphone GPS data, can be mapped with the Google Maps API.
+        The tool pulls in four data fields from our OBD-II dataset and calculates it using the funness model we created. This generates an approximate funness rating for each segment of road which, when combined with smartphone GPS location, can be mapped with the Google Maps API.
       h4 My role
-      p Prototyping, UI, web dev
+      p Prototyping, UI, web development
 
   section.a-project.d
     div.unit.three-of-four
@@ -45,12 +42,12 @@ section.projects
     div.unit.one-of-four
       h3 SwapBot
       p.
-        I helped plan the user flow and led the design and coding of the website. We won 3rd place and a $500 prize at the Lincoln Labs hackathon in Oct 2013.
+        I led the design and coding of the website. We won 3rd place and a $500 prize at the Lincoln Labs hackathon in Oct 2013.
       h4 How it works
       p.
-        SwapBot increases clothing donations by creating a better experience for both sides of the system: donors and recipients. We match donors' items to those with a specific need for that item and encourage communications through our platform.
+        SwapBot increases clothing donations by creating a better experience for both sides of the system: donors and recipients. We match donors' items to those with a specific need for the item and encourage communications through our platform.
       h4 My role
-      p UX, UI, web dev
+      p UX/UI, web development
 
   section.a-project.c
     div.unit.three-of-four
@@ -58,12 +55,15 @@ section.projects
     div.unit.one-of-four
       h3 tosigram
       p.
-        I conducted user research, interviews, data collection, 
+        I conducted user research, data collection, and built the initial product. We won a $2000 grant as well as the DEMOgod award at DEMO.
       h4 How it works
-      p. 
-        
+      p.
+        tosigram generates a free, embeddable JavaScript widget that displays an easy-to-read version of your Terms of Service and Privacy Policy.
       h4 My role
-      p UX, UI  
+      p UX/UI  
+      p
+        a(href="http://venturebeat.com/2012/04/19/demo-gods-winners/") VentureBeat
+        a(href="http://www.flickr.com/photos/democonference/6941531140/in/set-72157629697754689") Flickr
 
   section.a-project.b
     div.unit.three-of-four
@@ -71,12 +71,12 @@ section.projects
     div.unit.one-of-four
       h3 Hejia ERP
       p.
-        I led a complete redesign of Hejia's mobile ERP client, working with iOS and Android developers to implement on both platforms.
+        I led a complete overhaul of Hejia's mobile ERP client, working with iOS and Android developers to implement the new design on both platforms.
       h4 How it works
       p.
-        Hejia is one of the leading ERP companies in China, providing small and medium-sized businesses with software to manage their businesses. The recent proliferation of mobile devices has created a demand for mobile access to ERP and information capture on the go.
+        Hejia is one of the top ERP companies in China, providing small and medium-sized businesses with software to run their businesses. The recent growth of mobile devices has created a demand for access to ERP and information capture on the go.
       h4 My role
-      p UI (iOS & Android)
+      p Intern, UI (mobile)
 
   section.a-project.e
     div.unit.three-of-four
@@ -84,10 +84,10 @@ section.projects
     div.unit.one-of-four
       h3 Gainesville Tech
       p.
-        This was my first branding project, helping with an effort to build the tech community in my town.
+        This was my first branding project, helping an effort to promote the tech community in my town.
       h4 How it works
       p.
-        Gainesville has a small but increasingly active startup community anchored by the University of Florida and Grooveshark as well as many smaller startups. Gainesville Tech aims to cover the growth of tech and startup companies.
+        Gainesville has a small but tight-knit startup community anchored by the University of Florida, Grooveshark, Paracosm, and several other startups. Gainesville Tech aims to cover local tech and startup companies.
       h4 My role
       p Branding
 
@@ -97,15 +97,16 @@ section.projects
     div.unit.one-of-four
       h3 ArmAlarm
       p.
-        I helped plan the experience and ergonomics and assisted with soldering. Our team won 1st place of 13 teams at Science Hack Day Chicago.
+        I helped think about the experience and ergonomics and assisted with soldering. Our team won 1st place of 13 teams at Science Hack Day Chicago.
       h4 How it works
       p.
-        ArmAlarm is a prototype wrist-worn alarm clock that reads the wearer's heartrate using IR. It gently vibrates at a set time in the morning but can only be turned off by raising one's heartrate&mdash;meaning you have to get out of bed and do something physical!
+        ArmAlarm is a prototype wrist-worn alarm clock that can read the wearer's heartrate using IR. It gently vibrates on your wrist at a set time in the morning but can only be turned off by raising one's heartrate&mdash;meaning you have to get out of bed and do something physical!
       h4 My role
       p UX, physical
       p 
         a(href="http://chicago.sciencehackday.com/") SHDCHI
         a(href="http://www.flickr.com/photos/andrewnonumbers/sets/72157629709261784/") Photos
+
     
   section.a-project.c
     div.unit.three-of-four
@@ -113,9 +114,9 @@ section.projects
     div.unit.one-of-four
       h3 CMU iOS app
       p.
-        This is a demo of something I built way back at my first ever hackathon, when I was in high school. 
+        This is a demo of something I built back at my first ever hackathon when I was in high school. 
       h4 How it works
       p.
-        The iOS app pulls in data from feeds made available by Carnegie Mellon University and displays them in a unified app, creating a fast experience for prospective students to engage with the school, learn about what's happening, and plan a visit.
+        The iOS app pulls in data from RSS feeds made available by Carnegie Mellon University and displays them in a single app, creating a fast and slick experience for prospective students to engage with the school, learn about what's happening on campus, and plan a visit.
       h4 My role
       p Everything
