did a lot of updating of the site, so that it's presentable now I think

--- a/_harpapp/public/a/about.jade
+++ b/_harpapp/public/a/about.jade
@@ -1,8 +1,12 @@
 h1 About
 
-img(src="/img/Andrew ChenIMG1.png")
+img(src="/img/10410984_688582481190669_9113513446670072781_n.jpg")
+
+<br><br><br>
 
 article!= partial("about-text")
+
+<br>
 
 ul.majorlist
   li: a(href="https://twitter.com/_ndrw") Twitter
@@ -11,4 +15,4 @@ ul.majorlist
   li: a(href="http://www.flickr.com/photos/andrewnonumbers/sets") Flickr
   li: a(href="mailto:andrewnonumbers+site@gmail.com") Email Me
 
-  
+<br><br><br><br>
