--- a/_harpapp/public/articles/index.jade
+++ b/_harpapp/public/articles/index.jade
@@ -2,17 +2,27 @@
 h2 Articles
 
 
-h3 People
+h3 Events
 ul.majorlist
+	li: a(href="/articles/ford-cfo-bob-shanks.html") Bob Shanks, Ford CFO
 	li: a(href="/articles/pplx-max-levchin-oct-29-berkeley.html") Max Levchin, Oct 29, Berkeley
 	li: a(href="/articles/drew-houston.html") Drew Houston, Oct 14, Berkeley
 	li: a(href="/articles/jeff-queisser-and-sam-ghods.html") Jeff Queisser and Sam Ghods, 2 of 4 co-founders of Box, Sep 26, Berkeley
 
+h3 Academic
+ul.majorlist
+	li: a(href="/articles/todd-m-gureckis.html") Self-directed learning: Understanding the interactions between decision making, learning, and memory
+	li: a(href="/articles/prototyping-potential-futures.html") BiD: Prototyping Potential Futures
+	li: a(href="/articles/UIST-talk-previews-Round-2-at-BiD.html") UIST talk previews Round 2 at BiD
+
+
 h3 Conferences
 ul.majorlist
+	li: a(href="/articles/envisioning-the-future-of-detroit.html") Envisioning the Future of Detroit
 	li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
 
 h3 Software
 ul.majorlist
-	li: a(href="/articles/UIST-talk-previews-Round-2-at-BiD.html") UIST talk previews Round 2 at BiD
 	li: a(href="/articles/html-slideshow.html") HTML slideshow systems
+
+prototyping-potential-futures
