--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -15,7 +15,7 @@ div.covertext
             li Writer of <a href="http://designtox.tumblr.com">designtox</a> tumblr
         div.unit.one-of-two
           ul
-            li Co-founder <a href="http://tinyterms.co">TinyTerms</a>
+            li Co-founder of <a href="http://tinyterms.co">TinyTerms</a>
 
 
 div.cover
@@ -34,41 +34,23 @@ section.menu
         //li: a(href="/a/previously.html") Case Study: TinyTerms
         li: a(href="/a/previously.html") Projects
         li: a(href="/a/favorites.html") Favorite Things
-        //li: a(href="https://twitter.com/_ndrw/favorites") Tweets I'm Reading
+        li: a(href="https://twitter.com/_ndrw/favorites") Tweets I Read &#10166;
         //li: a(href="#") How I work
         //li: a(href="#") Shop
     nav.unit.two-of-three
       ul
         li Hi again
         li.mutedtext.
-          The format of a bio.
+          I'm Andrew Sierran Chen. I am a product designer. I conceptualize, build, and test designs for technology products that will change the world. 
 
-          I am a product designer. I conceptualize and test designs for technology products that will change the world. I previously
+          I previously interned in Beijing, talked to President Obama, lived in a van, founded two startups, and tested the Cr-48 for Google. I now excitedly work on designing TinyTerms, using design to improve the process of writing and reading legal contracts. If you're interested in society, law, or design, you should <a href="mailto:andrewnonumbers+site@gmail.com">talk to me</a>.
 
+          Besides design, I like to keep myself current on psychology (particularly cognition & memory, behavior, and personality), societal issues, education issues, sustainability, and Kanye West. I am a maker, hacker, philosopher, and critical thinker.
 
-          I am <a profession>. <I build and help run companies that unlock human potential.> 
+          My latest project is TinyTerms, which was born out of Startup Weekend Legaltech and won Github's Judge's Choice award.
 
-          I <previously did this, and this, and this>, and <later headed the site after its acquisition by IGN>. I now excitedly lead the design effort <at TinyTerms>, using design to improve access to legal contracts. If you are interseted in <aisdjfi, aisdfjdaf, or asdifjsidfj>, you should talk to me. 
-
-          I work at <Zaarly>. On weekends I build <Evergreen (@evergrnlibrary)>.
-
-          I have studied <design, philosophy, psychology, and cognitive science>. Besides design, I <have interest in this, or have worked in this, or blah>. I have <4 years of experience working on product in tech startups in the US and China>. 
-
-          I also serve <as research lead at Car Design Research, advisor to Royal College of Art, and lab coordinator at CIW>. I was a <finalist for the 800CEORead award for best business book of 2010, and was ranked as one of the year's best books by The Economist>. <His book The Ghost Map was one of the ten best nonfiction books of 2006 according to Entertainment Weekly.> 
-
-          I am a <musician, designer, critical thinker, and philosopher> or I like to <think about this, create this, play guitar, etc.>. 
-
-          I was a top student in high school, and tested out of a year's worth of college. I studied a little bit at University of Florida and a little bit at the University of California at Berkeley and a little bit on my own. I write and think about design, education, and society. My latest project is <An iOS app called Spot that I built for MHacks> came out of Startup Weekend Legaltech, where we won Github's Judge's Choice Award and have been featured on <VentureBeat, Chicago Tribune.>
-
-
-
-          I'm Andrew. I'm a student with a strong interest in designing experiences and digital products. <!--In the past, I've . However, what I truly love is experiences, products, behavior, and humans.-->
-
-          My life revolves around the intersection of design, technology, education, and sustainability.
-
-          I currently live in Berkeley, CA, but have previously lived in Chicago, Florida, New York, Beijing, Montreal, and Vancouver.
-
-          I post some quite opinionated shit on <a href="https://twitter.com/_ndrw">Twitter</a> and snap some occassional photos on <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.
+          I post occasionally provocative things to <a href="https://twitter.com/_ndrw">Twitter</a> and infrequent photos on <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.
+          
     
     //
       nav.unit.one-of-three
