--- a/_harpapp/public/a/favorites.ejs
+++ b/_harpapp/public/a/favorites.ejs
@@ -1,9 +1,22 @@
-<section>
-	<a href="http://matt.might.net/articles/phd-school-in-pictures/">Matt Might's diagram of knowledge</a>
+<div class="favorites-page">
+	<section>
+		<a href="http://matt.might.net/articles/phd-school-in-pictures/">Matt Might's diagram of knowledge</a>
 
-</section>
+	</section>
 
-<section>
-	<iframe src="//player.vimeo.com/video/48437619?portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/48437619">Technori Pitch: August 2012 Keynote - Emerson Spartz</a> from <a href="http://vimeo.com/user11225890">Technori</a></p>
-</section>
+	<section>
+		<iframe src="//player.vimeo.com/video/48437619?portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/48437619">Technori Pitch: August 2012 Keynote - Emerson Spartz</a> from <a href="http://vimeo.com/user11225890">Technori</a></p>
+	</section>
 
+	<section>
+		<a href="http://thedianerehmshow.org/shows">The Diane Rehm Show</a>
+
+	</section>
+
+	<section>
+		<a href="http://intelligencesquaredus.org/debates/past-debates">Intelligence Squared Debates US</a>
+
+	</section>
+
+	
+</div>
