two small changes

--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -29,7 +29,7 @@ section.menu
         li Work
         li: a(href="/a/about.html") About
         li: a(href="/articles/") Articles
-        li: a(href="/weeResume") Résumé
+        li: a(href="/resume") Résumé
         //li: a(href="/a/previously.html") Case Study: Hejia
         //li: a(href="/a/previously.html") Case Study: TinyTerms
         li: a(href="/a/previously.html") Projects
