small changes to style and content

--- a/_harpapp/public/a/previously.jade
+++ b/_harpapp/public/a/previously.jade
@@ -5,9 +5,14 @@ include ../project/index.jade
 
 
 
+br
+br
+br
+br
 
 h2 Conferences
 ul.majorlist
-  li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
-  li: a(href="#") Gigaom Roadmap 2014
-  li: a(href="#") Startup Fest
+	li: a(href="/articles/gigaom-roadmap-2014.html") Gigaom Roadmap 2014
+	li: a(href="/articles/yc-startup-school-2014.html") YC Startup School 2014
+	li: a(href="/articles/envisioning-the-future-of-detroit.html") Envisioning the Future of Detroit
+	li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
