--- a/_harpapp/public/articles/index.jade
+++ b/_harpapp/public/articles/index.jade
@@ -2,6 +2,11 @@
 h2 Articles
 
 
+
+h3 Lists
+ul.majorlist
+	li: a(href="/articles/one-line-book-reviews.html") One-Line UX Book Reviews
+
 h3 Events
 ul.majorlist
 	li: a(href="/articles/ford-cfo-bob-shanks.html") Bob Shanks, Ford CFO
@@ -18,6 +23,8 @@ ul.majorlist
 
 h3 Conferences
 ul.majorlist
+	li: a(href="/articles/gigaom-roadmap-2014.html") Gigaom Roadmap 2014
+	li: a(href="/articles/yc-startup-school-2014.html") YC Startup School 2014
 	li: a(href="/articles/envisioning-the-future-of-detroit.html") Envisioning the Future of Detroit
 	li: a(href="/articles/warmgun-2013.html") Warmgun 2013 notes
 
@@ -25,4 +32,3 @@ h3 Software
 ul.majorlist
 	li: a(href="/articles/html-slideshow.html") HTML slideshow systems
 
-prototyping-potential-futures
