--- a/_harpapp/public/index.jade
+++ b/_harpapp/public/index.jade
@@ -41,15 +41,15 @@ section.menu
       ul
         li Hi again
         li.mutedtext.
-          I'm Andrew Sierran Chen. I am a product designer. I conceptualize, build, and test designs for technology products that will change the world. 
+          I'm Andrew Sierran Chen. I spend a lot of time conceptualizing, designing, and testing technology products.
 
-          I previously interned in Beijing, talked to President Obama, lived in a van, founded two startups, and tested the Cr-48 for Google. I now excitedly work on designing TinyTerms, using design to improve the process of writing and reading legal contracts. If you're interested in society, law, or design, you should <a href="mailto:andrewnonumbers+site@gmail.com">talk to me</a>.
+          I previously interned in Beijing, talked to President Obama, tested the Cr-48 for Google, started two startups, and lived in a van. I now excitedly work on TinyTerms, using design to build a better way of writing and reading legal contracts. If you're interested in society, law, or design, you should <a href="mailto:andrewnonumbers+site@gmail.com">talk to me</a>.
 
           Besides design, I like to keep myself current on psychology (particularly cognition & memory, behavior, and personality), societal issues, education issues, sustainability, and Kanye West. I am a maker, hacker, philosopher, and critical thinker.
 
           My latest project is TinyTerms, which was born out of Startup Weekend Legaltech and won Github's Judge's Choice award.
 
-          I post occasionally provocative things to <a href="https://twitter.com/_ndrw">Twitter</a> and infrequent photos on <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.
+          I post occasionally provocative things to <a href="https://twitter.com/_ndrw">Twitter</a> and infrequent photos to <a href="https://www.flickr.com/photos/andrewnonumbers/sets">Flickr</a> and <a href="http://instagram.com/andrewnonumbers">Instagram</a>.
           
 
     //
