--- a/_harpapp/public/project/index.jade
+++ b/_harpapp/public/project/index.jade
@@ -20,7 +20,7 @@ section.projects
         As co-founder, I led the idea and made sure the product was beautiful, focused, and cohesive. As the only designer on the team, I worked with three developers on the product, leading the branding and user experience.
       h4 How it works
       p.
-        TinyTerms was a modular app that generated embeddable and printable legal documents in a beautiful, easy-to-read format. The mission was to make it easy for everyone to create and read legal documents.
+        TinyTerms is a modular app that generated embeddable and printable legal documents in a beautiful, easy-to-read format. The mission is to make it easy for everyone to create and read legal documents.
       h4 My role
       p Co-founder, Design Lead
 
