--- a/_harpapp/public/resume/firstToast.less
+++ b/_harpapp/public/resume/firstToast.less
@@ -251,10 +251,9 @@ html {
 @gray: #A2A2A2;
 
 .fullname {
-	font-family: 'Slabo 27px', Helvetica, sans-serif;
-	text-transform: uppercase;
+	font-family: 'Oswald', Helvetica, sans-serif;
 	font-weight: 400;
-	font-size: 2.9rem;
+	font-size: 3.4rem;
 	margin-left: 4px;
 	margin-top: 22px;
 }
